  Richard Martin and Maciej Haranczyk (Lawrence Berkeley Laboratory) for
  pointing out the original problem.
* Fixed other problems with the radical tessellation. Originally, the
  algorithms were concieved for with hard spheres in mind, where the particles
  would not overlap, and an assumption was used in the cutoff procedure that
  made use of this, but would not be true in general.
* Code comment cleanups, particularly in wall.hh

Version 0.4.1 (September 7th 2011)
==================================
* Fixed bug in command-line utility that would give incorrect results when
  using the "-c" option for custom output. Thanks to Prof. Aldo Romero
  (CINVESTAV-Unidad Queretaro) for pointing this out.
* Added some additional documentation about neighbor information

Version 0.4 (August 30th 2011)
==============================
* New classes called container_periodic and container_periodic_poly that carry
  out Voronoi computations in 3D periodic parallelepiped unit cells have been
  added. This adds significant complexity to the computation, and the memory
  organization of these classes is different, requiring allocation for ghost
  regions. Currently these classes cannot be accessed by the command-line
  utility, but will be integrated further in future releases. These classes are
  currently mainly exploited by a sister software project Zeo++ for chemical
  informatics (Maciej Haranczyk, Chris Rycroft, Thomas Willems, Richard Martin)
  to be released in late 2011.
* As part of the new container_periodic classes, a new class called unitcell
  has been added, which will compute the Voronoi cell for a single particle in
  a 3D periodic parallelepiped class. The Voronoi cell is formed by the
  influences of the periodic images of itself only. This turns out to be an
  important component of the calculations done by the container_periodic
  classes but can also be used independently.
* The container classes now have a routine called find_voronoi_cell that will